<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#545353"
    tools:layout_editor_absoluteY="81dp"
    >


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/forniteButton"
                android:layout_width="190dp"
                android:layout_height="290dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="17dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/fornite"
                android:paddingRight="4dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@+id/irlButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/fortnite" />

            <ImageButton
                android:id="@+id/pubgButton"
                android:layout_width="190dp"
                android:layout_height="290dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/forniteButton"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/pubg"
                android:paddingLeft="4dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@+id/lolButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/forniteButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@mipmap/pubg" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/irlButton"
                android:layout_width="190dp"
                android:layout_height="290dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="81dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/irl"
                android:paddingLeft="8dp"
                android:paddingRight="4dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/lolButton"
                app:layout_constraintHorizontal_bias="0.348"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forniteButton"
                app:srcCompat="@mipmap/irl" />

            <ImageButton
                android:id="@+id/csgoButton"
                android:layout_width="190dp"
                android:layout_height="290dp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/pubgButton"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/lol"
                android:paddingLeft="4dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pubgButton"
                app:srcCompat="@mipmap/csgo" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/overwatchButton"
                android:layout_width="190dp"
                android:layout_height="290dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/irl"
                android:paddingLeft="8dp"
                android:paddingRight="4dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/lolButton"
                app:layout_constraintHorizontal_bias="0.348"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forniteButton"
                app:srcCompat="@mipmap/overwatch" />

            <ImageButton
                android:id="@+id/lolButton"
                android:layout_width="190dp"
                android:layout_height="290dp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/pubgButton"
                android:layout_marginBottom="81dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/lol"
                android:paddingLeft="4dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pubgButton"
                app:srcCompat="@mipmap/lol" />

        </TableRow>

    </TableLayout>
</ScrollView>